# tiny-tibber-dashboard

./: .gitignore  Cargo.toml  Dockerfile.template  LICENSE  README.md
src/: display.rs  main.rs  query.graphql  schema.json  tibber.rs
