[package]
name = "tibber-dashboard"
version = "0.1.0"
authors = ["Albert <mail@albertskog.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.0"
embedded-graphics-simulator = "0.2.0"
graphql_client = "0.9.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
failure = "0.1.7"
serde = "1.0.105"
