[package]
name = "tibber-dashboard"
version = "0.1.0"
authors = ["Albert <mail@albertskog.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.0"
graphql_client = "0.9.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = "1.0.105"

[target.'cfg(not(target_arch = "arm"))'.dependencies]
embedded-graphics-simulator = "0.2.0"

[target.'cfg(target_arch = "arm")'.dependencies]
ssd1306 = "0.3.1"
linux-embedded-hal = "0.3.0"
